--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -10,10 +10,10 @@
     background: linear-gradient(45deg,transparent,black,transparent);
     display: grid;
     place-items: center;
-    height: 50vh;
+    height: auto;
 }
 .about_me_image{
-    height: 50vh;
+    height: min-content;
     border-radius: 2rem;
     overflow: hidden;
     transform: rotate(10deg);
@@ -74,7 +74,6 @@
     .about_me{
         width: 50%;
         margin: 1rem auto 2rem;
-        height: 50vh;
     }
 
     .about_content p{
@@ -91,7 +90,6 @@
     .about_me{
         width: 65%;
         margin: 0rem auto 1rem;
-        height: 50vh;
     }
 
     .about_content{
