--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -42,8 +42,7 @@ header{
     background: linear-gradient(var(--color-primary),transparent);
     width: 22rem;
     height: 30rem;
-    position: absolute;
-    left: calc(50% - 11rem);
+    margin: 0 auto;
     margin-top: 4rem;
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
@@ -65,6 +64,7 @@ header{
 @media screen and (max-width: 1024px){
     header{
         padding: 1rem;
+        height: auto;
     }
     .cta{
         margin-top: 1rem;
