--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -25,7 +25,7 @@
 
 .about_cards {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3);
     gap: 1.5rem;
 }
 
